feat(tokenizer): working on tokenizers, added BERT tokenizer